--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -15,7 +12,6 @@
   <meta name="description" content="">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
-
 </head>
 
 <body>
@@ -53,26 +49,26 @@ Add something...</p>
 <h3>
 <a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
 
-<p>Add something...
+<p>Hardware
 Add something...</p>
 
 <h3>
 <a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
 
-<p>Add something...
+<p>Systems
 Add something...
 Add something...</p>
 
 <h3>
 <a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
 
-<p>Add something...
+<p>Networks
 Add something...</p>
 
 <h3>
 <a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
 
-<p>Add something...
+<p>Applications
 Add something...
 Add something...</p>
         </article>
@@ -80,12 +76,7 @@ Add something...</p>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">ashumeow</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">this website</a>.</p>
       </div>
     </footer>
   </div>
@@ -94,7 +85,5 @@ Add something...</p>
     <a href="https://github.com/ashumeow/ashumeow.me/tarball/master" class="tar">tar</a><a href="https://github.com/ashumeow/ashumeow.me/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
-
-  
 </body>
 </html>
