--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">ashumeow</h1>
+      <h1 class="title">Learn...Discover...Connect (^_^)</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/ashumeow/ashumeow.me/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/ashumeow/ashumeow.me/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/ashumeow/ashumeow.me" class="code">View ashumeow on GitHub</a>
+          <a href="https://github.com/ashumeow/ashumeow/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/ashumeow/ashumeow/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/ashumeow/ashumeow" class="code">View ashumeow on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -47,28 +47,28 @@ Add something...
 Add something...</p>
 
 <h3>
-<a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
+<a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
 
-<p>Hardware
+<p>Add something...
 Add something...</p>
 
 <h3>
-<a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
+<a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
 
-<p>Systems
+<p>Add something...
 Add something...
 Add something...</p>
 
 <h3>
-<a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
+<a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
 
-<p>Networks
+<p>Add something...
 Add something...</p>
 
 <h3>
-<a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Add something...</h3>
+<a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 
-<p>Applications
+<p>Add something...
 Add something...
 Add something...</p>
         </article>
