--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Learn...Discover...Connect (^_^)</h1>
+      <h1 class="title">Exploring is Fun! (^_^)</h1>
     </header>
     <div id="container">
       <p class="tagline"></p>
@@ -33,24 +33,21 @@
         </div>
         <article class="markdown-body">
           <h3>
-<a id="welcome-to-add-something" class="anchor" href="#welcome-to-add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to (add something).</h3>
+<a id="welcome-to-add-something" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
 
-<p>Add something...
-Add something...</p>
-
-<pre><code>Add something...
-Add something...
-
+<pre><code>Learn...
+Connect...
+Discover...
 </code></pre>
-
-<p>Add something...
-Add something...</p>
 
 <h3>
 <a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
 
-<p>Add something...
-Add something...</p>
+<p>
+Hardware Basics --- [add link] <br>
+Hardware Internals --- [add link] <br>
+Hardware Networking Basics --- [add link]
+</p>
 
 <h3>
 <a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
