--- a/index.html
+++ b/index.html
@@ -7,75 +7,72 @@
   <link rel="stylesheet" href="stylesheets/pygment_trac.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
-
   <title>ashumeow</title>
   <meta name="description" content="">
-
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-
 <body>
-
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Exploring is Fun! (^_^)</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
+<div class="wrapper">
+  <header>
+    <h1 class="title">Exploring is Fun! (^_^)</h1>
+  </header>
+  <div id="container">
+    <p class="tagline">
+    </p>
+    <div id="main" role="main">
+      <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/ashumeow/ashumeow/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/ashumeow/ashumeow/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/ashumeow/ashumeow" class="code">View ashumeow on GitHub</a>
+        <a href="https://github.com/ashumeow/ashumeow/tarball/master" class="download-button tar"><span>Download</span></a>
+        <a href="https://github.com/ashumeow/ashumeow/zipball/master" class="download-button zip"><span>Download</span></a>
+        <a href="https://github.com/ashumeow/ashumeow" class="code">View ashumeow on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
-<a id="welcome-to-add-something" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
-
+      </div>
+      <article class="markdown-body">
+      <h3><a id="welcome-to-add-something" class="anchor" href="#welcome" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome!</h3>
 <pre><code>Learn...
 Connect...
 Discover...
 </code></pre>
-
-<h3>
+<h3> <!-- HARDWARE -->
 <a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
-
 <p>
 Hardware Basics --- [add link] <br>
 Hardware Internals --- [add link] <br>
 Hardware Networking Basics --- [add link]
 </p>
 
-<h3>
+<h3> <!-- SYSTEMS -->
 <a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
-
-<p>Add something...
+<p>
 Add something...
-Add something...</p>
+Add something...
+Add something...
+</p>
 
-<h3>
+<h3> <!-- NETWORKS -->
 <a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
-
-<p>Add something...
-Add something...</p>
-
-<h3>
-<a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
-
-<p>Add something...
+<p>
 Add something...
-Add something...</p>
-        </article>
-      </div>
+Add something...
+</p>
+
+<h3> <!-- APPLICATIONS -->
+<a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
+<p>
+Add something...
+Add something...
+Add something...
+</p>
+  </article>
+  </div>
+  </div>
+<footer>
+    <div class="owner">
+    <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> 
+      <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">this website</a>.</p>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">this website</a>.</p>
-      </div>
-    </footer>
+</footer>
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
