--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -35,7 +35,7 @@ Add Something...
 <br><br>
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
-</div>
+</div> </div>
 <br><br>
 <footer>
     <div class="owner">
@@ -43,7 +43,6 @@ Add Something...
       <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">this website</a>.</p>
     </div>
 </footer>
-  </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
     <a href="https://github.com/ashumeow/ashumeow.me/tarball/master" class="tar">tar</a><a href="https://github.com/ashumeow/ashumeow.me/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
