add article tag

--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -27,11 +27,13 @@
         <a href="https://github.com/ashumeow/ashumeow" class="code">View ashumeow on GitHub</a>
         </div>
 <!-- HARDWARE -->
-<a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
+<article class="markdown-body">
+<a id="add-something" class="anchor" href="#hardware-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
 <p>
 Add Something...
 ...
 </p>
+</article>
 <br><br>
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
