--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -26,6 +26,8 @@
         <a href="https://github.com/ashumeow/ashumeow/zipball/master" class="download-button zip"><span>Download</span></a>
         <a href="https://github.com/ashumeow/ashumeow" class="code">View ashumeow on GitHub</a>
         </div>
+        <span class="blc"></span><span class="trc"></span>
+      </div>
 <!-- HARDWARE -->
 <article class="markdown-body">
 <a id="add-something" class="anchor" href="#hardware-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
