add heading tag

--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -30,7 +30,7 @@
       </div>
 <!-- HARDWARE -->
 <article class="markdown-body">
-<a id="add-something" class="anchor" href="#hardware-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
+<h3><a id="add-something" class="anchor" href="#hardware-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
 <p>
 Add Something...
 ...
