--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ Discover...
 <h3> <!-- HARDWARE -->
 <a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
 <p>
-Hardware Basics --- [add link] <br>
-Hardware Internals --- [add link] <br>
-Hardware Networking Basics --- [add link]
+[1] <a href="http://ashumeow.github.io/ashumeow/hardware_basics.html">Hardware Basics</a> <br>
+[2] Hardware Internals --- [add link] <br>
+[3] Hardware Networking Basics --- [add link]
 </p>
 
 <h3> <!-- SYSTEMS -->
