--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -35,11 +35,12 @@
 Add Something...
 ...
 </p>
-</article>
+
 <br><br>
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
-</div> </div>
+</div>
+</article>
 <br><br>
 <footer>
     <div class="owner">
