--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -40,7 +40,7 @@ Add Something...
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
 </div>
-</article>
+</article> </div>
 <br><br>
 <footer>
     <div class="owner">
