close tag properly

--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -39,8 +39,8 @@ Add Something...
 <br><br>
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
-</div>
-</article> </div>
+</div> </div>
+</article>
 <br><br>
 <footer>
     <div class="owner">
