add another try

--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -37,9 +37,10 @@ Add Something...
 </p>
 
 <br><br>
+</div>
 <div class="inner">
 <a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
-</div> </div>
+</div>
 </article>
 <br><br>
 <footer>
