--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -39,10 +39,9 @@ Add Something...
 <br><br>
 </div>
 <div class="inner">
-<a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
+<a href="http://ashumeow.github.io/ashumeow/" class="code">Click here to go back</a> <br><br>
 </div>
 </article>
-<br><br>
 <footer>
     <div class="owner">
     <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> 
