add back span and shift footer

--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -39,19 +39,19 @@ Add Something...
 <br><br>
 </div>
 <div class="inner">
-<a href="http://ashumeow.github.io/ashumeow/" class="code">Click here to go back</a> <br><br>
+<a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
 </div>
 </article>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/ashumeow/ashumeow.me/tarball/master" class="tar">tar</a><a href="https://github.com/ashumeow/ashumeow.me/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 <footer>
     <div class="owner">
     <p><a href="https://github.com/ashumeow" class="avatar"><img src="https://avatars3.githubusercontent.com/u/5597047?v=3&amp;s=60" width="48" height="48"></a> 
       <a href="https://github.com/ashumeow">ashumeow</a> maintains <a href="https://github.com/ashumeow/ashumeow.me">this website</a>.</p>
     </div>
 </footer>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/ashumeow/ashumeow.me/tarball/master" class="tar">tar</a><a href="https://github.com/ashumeow/ashumeow.me/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
 </body>
 </html>
