--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -39,7 +39,7 @@ Add Something...
 <br><br>
 </div>
 <div class="inner">
-<a href="http://ashumeow.github.io/ashumeow/" class="code"><span>Click here to go back</span></a>
+<a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here to go back</span></a>
 </div>
 </article>
   <div class="current-section">
