--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -38,9 +38,8 @@ Add Something...
 
 <br><br>
 </div>
-<div class="inner">
-<a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here to go back</span></a>
-</div>
+<br><br>
+To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
 </article>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
