--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -32,8 +32,30 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Basics</h3>
 <p>
-Add Something...
-...
+<b>What is hardware? </b><br>
+Hardware is defined as the collection of physical parts that helps in building a system.
+<br><br>
+<b>Compoenents of hardware: </b><br>
+1. Core components <br>
+-- Monitor<br>
+-- Hard Disk/Hard drive<br>
+-- Keyboard <br>
+-- Mouse/Touch pad/Trackball<br>
+2. Multimedia components <br>
+-- DVD/CD drive <br>
+-- Video card <br>
+-- Sound card <br>
+-- Speakers <br>
+-- Headset/Headphone/Microphone <br>
+3. Other peripheral device components <br>
+-- Printer/Scanner <br>
+-- CD burner, CD recorder, CD-R (read), CD-RW (read/write) <br>
+-- Modem <br>
+-- USB flash drive <br>
+-- Webcam <br>
+-- Digital camera <br>
+-- Digital Voice Recorder <br>
+-- Camcorder
 </p>
 <br><br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
