--- a/hardware_basics.html
+++ b/hardware_basics.html
@@ -35,19 +35,19 @@
 <b>What is hardware? </b><br>
 Hardware is defined as the collection of physical parts that helps in building a system.
 <br><br>
-<b>Compoenents of hardware: </b><br>
-1. Core components <br>
+<b>Components of hardware: </b><br>
+1. Core components <br> <i>
 -- Monitor<br>
 -- Hard Disk/Hard drive<br>
 -- Keyboard <br>
--- Mouse/Touch pad/Trackball<br>
-2. Multimedia components <br>
+-- Mouse/Touch pad/Trackball</i><br>
+2. Multimedia components <br><i>
 -- DVD/CD drive <br>
 -- Video card <br>
 -- Sound card <br>
 -- Speakers <br>
--- Headset/Headphone/Microphone <br>
-3. Other peripheral device components <br>
+-- Headset/Headphone/Microphone</i> <br>
+3. Other peripheral device components <i><br>
 -- Printer/Scanner <br>
 -- CD burner, CD recorder, CD-R (read), CD-RW (read/write) <br>
 -- Modem <br>
@@ -55,9 +55,9 @@ Hardware is defined as the collection of physical parts that helps in building a
 -- Webcam <br>
 -- Digital camera <br>
 -- Digital Voice Recorder <br>
--- Camcorder
+-- Camcorder</i>
 </p>
-<br><br>
+<br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
 </div>
 </article>
