--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Discover...
 <a id="add-something" class="anchor" href="#add-something" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
 <p>
 [1] <a href="http://ashumeow.github.io/ashumeow/hardware_basics.html">Hardware Basics</a> <br>
-[2] Hardware Internals --- [add link] <br>
+[2] <a href="http://ashumeow.github.io/ashumeow/hardware_internals.html">Hardware Internals</a><br>
 [3] Hardware Networking Basics --- [add link]
 </p>
 
