--- a/hardware_internals.html
+++ b/hardware_internals.html
@@ -32,10 +32,20 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-internals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Internals</h3>
 <p>
-Add something... <br>
-Add something...
-</p>
-<br>
+<b>Motherboard </b> <br>
+The Motherboard is the main board (or system board) that has physical parts where the electronic circuits provide communication among the parts which are being connected. The following parts will be explained below. <br>
+1. Central Processing Unit (CPU) <br>
+2. Basic Input/Output System (BIOS) <br>
+3. Memory <br>
+4. Mass storage interfaces <br>
+5. Serial and Parallel ports <br>
+6. Expansion slots <br>
+7. Controllers <br>
+8. ROM<br>
+9. RAM<br>
+10. Cache<br>
+11. Graphics
+</p><br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
 </div>
 </article>
