--- a/hardware_internals.html
+++ b/hardware_internals.html
@@ -34,7 +34,7 @@
 <p>
 <b>Motherboard </b> <br>
 The Motherboard is the main board (or system board) that has physical parts where the electronic circuits provide communication among the parts which are being connected. The following parts will be explained below. <br>
-1. Central Processing Unit (CPU) <br>
+1. Central Processing Unit (CPU)<br>
 2. Basic Input/Output System (BIOS) <br>
 3. Memory <br>
 4. Mass storage interfaces <br>
@@ -44,8 +44,53 @@ The Motherboard is the main board (or system board) that has physical parts wher
 8. ROM<br>
 9. RAM<br>
 10. Cache<br>
-11. Graphics
-</p><br>
+11. <a href="#graphics" class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span>Graphics</a>
+</p>
+<p><b>1. Central Processing Unit (CPU) </b> <br>
+Add something...<br>
+Add something...
+</p>
+<p><b>2. Basic Input/Output System (BIOS) </b><br>
+Add something... <br>
+Add something...
+</p>
+<p><b>3. Memory</b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>4. Mass storage interfaces </b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>5. Serial and Parallel ports </b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>6. Expansion slots </b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>7. Controllers </b><br>
+Add something... <br>
+Add something...
+</p>
+<p><b>8. ROM </b><br>
+Add something... <br>
+Add something...
+</p>
+<p><b>9. RAM </b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>10. Cache</b><br>
+Add something...<br>
+Add something...
+</p>
+<p><b>11. Graphics (<a href="#graphics">#</a>)</b><br>
+Add something...<br>
+Add something...
+</p>
+<br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
 </div>
 </article>
