--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Discover...
 <p>
 [1] <a href="http://ashumeow.github.io/ashumeow/hardware_basics.html">Hardware Basics</a> <br>
 [2] <a href="http://ashumeow.github.io/ashumeow/hardware_internals.html">Hardware Internals</a><br>
-[3] Hardware Networking Basics --- [add link]
+[3] <a href="http://ashumeow.github.io/ashumeow/hardware_networking_basics.html">Hardware Networking Basics</a>
 </p>
 
 <h3> <!-- SYSTEMS -->
