--- a/hardware_networking_basics.html
+++ b/hardware_networking_basics.html
@@ -30,9 +30,30 @@
       </div>
 <!-- HARDWARE -->
 <article class="markdown-body">
-<h3><a id="add-something" class="anchor" href="#hardware-internals" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Networking Basics</h3>
+<h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware Networking Basics</h3>
 <p>
-Add something...
+1. General devices <br>
+--- Gateway<br>
+--- Router<br>
+--- Switch<br>
+--- Bridge <br>
+--- Hub <br>
+--- Repeater <br>
+2. Hybrid network devices <br>
+--- Multilayer switch <br>
+--- Protocol converter <br>
+--- Bridge router <br>
+3. Hardware/Software components <br>
+--- Proxy server <br>
+--- Firewall <br>
+--- Network Address Translator (NAT) <br>
+4. Other devices <br>
+--- Multiplexer <br>
+--- Network Interface Controller (NIC) <br>
+--- Wireless Network Interface Controller <br>
+--- Modem <br>
+--- ISDN Terminal Adpater <br>
+--- Line driver
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
