--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@ Add something...
 <h3> <!-- NETWORKS -->
 <a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
 <p>
-Add something...
-Add something...
+[1] Network basics -- [add link] <br>
+[2] Network Structure -- [add link] <br>
+[3] Networking Types -- [add link] <br>
+[4] Network technologies types -- [add link] <br>
+[5] Network Communication Protocols -- [add link] <br>
+[6] Network Performance and Optimization -- [add link]
 </p>
 
 <h3> <!-- APPLICATIONS -->
