--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@ Discover...
 <h3> <!-- SYSTEMS -->
 <a id="add-something-1" class="anchor" href="#add-something-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
 <p>
-Add something...
-Add something...
-Add something...
+Operating System <br>
+--- Kernel ___ [add link] <br>
+--- Device drivers ___ [add link] <br>
+--- User interface ___ [add link] <br>
+--- Utility software ___ [add link]
 </p>
 
 <h3> <!-- NETWORKS -->
@@ -64,9 +66,10 @@ Add something...
 <h3> <!-- APPLICATIONS -->
 <a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 <p>
-Add something...
-Add something...
-Add something...
+1. Middleware/APIs <br>
+2. Languages <br>
+Add something... <br>
+Add something
 </p>
   </article>
   </div>
