--- a/index.html
+++ b/index.html
@@ -66,11 +66,19 @@ Operating System <br>
 <h3> <!-- APPLICATIONS -->
 <a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 <p>
-1. Middleware/APIs <br>
-2. Languages <br>
-Add something... <br>
-Add something
+(uncategorized) <br>
+1. Middleware/APIs -- [add link] <br>
+2. Languages -- [add link] <br>
+3. Version Control Systems -- [add link] <br>
+4.
 </p>
+
+<h3> <!-- SERVERS -->
+<a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
+<p>
+Add something...
+</p>
+
   </article>
   </div>
   </div>
