--- a/index.html
+++ b/index.html
@@ -66,17 +66,39 @@ Operating System <br>
 <h3> <!-- APPLICATIONS -->
 <a id="add-something-3" class="anchor" href="#add-something-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 <p>
-(uncategorized) <br>
-1. Middleware/APIs -- [add link] <br>
-2. Languages -- [add link] <br>
-3. Version Control Systems -- [add link] <br>
-4.
+~~(Uncategorized)~~ <br>
+[1] Middleware/APIs -- [add link] <br>
+[2] Languages -- [add link] <br>
+[3] Version Control Systems -- [add link] <br>
+[4] Web Browsers -- [add link]
 </p>
 
 <h3> <!-- SERVERS -->
 <a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
 <p>
-Add something...
+<b>----- Getting Started -----</b> <br>
+[1] Server basics <br>
+[2] <br>
+[3] <br>
+<b>----- Server Types -----</b> <br>
+[1] Application server <br>
+[2] Catalog server <br>
+[3] Communications server <br>
+[4] Compute server <br>
+[5] Database server <br>
+[6] Fax server <br>
+[7] File server <br>
+[8] Game server <br>
+[9] Home server <br>
+[10] Mail server <br>
+[11] Media server <br>
+[12] Mobile server <br>
+[13] Name server <br>
+[14] Print server <br>
+[15] Proxy server <br>
+[16] Sound server <br>
+[17] Stand-alone server <br>
+[18] Web server
 </p>
 
   </article>
