--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@ Operating System <br>
 <a id="add-something-2" class="anchor" href="#add-something-2" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
 <p>
 <b>----- Getting Started -----</b> <br>
-[1] Server basics <br>
+[1] Server basics -- [add link]  <br>
 [2] <br>
 [3] <br>
 <b>----- Server Types -----</b> <br>
-[1] Application server <br>
-[2] Catalog server <br>
-[3] Communications server <br>
-[4] Compute server <br>
-[5] Database server <br>
-[6] Fax server <br>
-[7] File server <br>
-[8] Game server <br>
-[9] Home server <br>
-[10] Mail server <br>
-[11] Media server <br>
-[12] Mobile server <br>
-[13] Name server <br>
-[14] Print server <br>
-[15] Proxy server <br>
-[16] Sound server <br>
-[17] Stand-alone server <br>
-[18] Web server
+[1] Application server -- [add link]  <br>
+[2] Catalog server -- [add link]  <br>
+[3] Communications server -- [add link]  <br>
+[4] Compute server -- [add link]  <br>
+[5] Database server -- [add link]  <br>
+[6] Fax server -- [add link]  <br>
+[7] File server -- [add link]  <br>
+[8] Game server -- [add link]  <br>
+[9] Home server -- [add link]  <br>
+[10] Mail server -- [add link]  <br>
+[11] Media server -- [add link]  <br>
+[12] Mobile server -- [add link]  <br>
+[13] Name server -- [add link]  <br>
+[14] Print server -- [add link]  <br>
+[15] Proxy server -- [add link]  <br>
+[16] Sound server -- [add link]  <br>
+[17] Stand-alone server -- [add link]  <br>
+[18] Web server -- [add link] 
 </p>
 
   </article>
