--- a/index.html
+++ b/index.html
@@ -66,7 +66,17 @@ Operating System <br>
 <h3> <!-- WWW -->
 <a id="add-something-2" class="anchor" href="#www" aria-hidden="true"><span class="octicon octicon-link"></span></a>WWW (World Wide Web)</h3>
 <p>
-Add something...
+<b>Requirements</b> <br>
+[1] Computer System <br>
+[2] Networking hardware <br>
+[3] Network Communication protocols <br>
+<b>Implementing the WWW </b> <br>
+[1] Web Client <br>
+GET /ashumeow/index.html HTTP/1.1 <br>
+Host: http://ashumeow.github.io <br>
+[2] Web Server <br>
+HTTP/1.0 200 OK <br>
+Content-Type: text/html; charset=UTF-8
 </p>
 
 <h3> <!-- APPLICATIONS -->
