--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Operating System <br>
 <b>Implementing the WWW </b> <br>
 [1] Web Client <br>
 GET /ashumeow/index.html HTTP/1.1 <br>
-Host: http://ashumeow.github.io <br>
+Host: ashumeow.github.io <br>
 [2] Web Server <br>
 HTTP/1.0 200 OK <br>
 Content-Type: text/html; charset=UTF-8
