--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Connect...
 Discover...
 </code></pre>
 <h3> <!-- HARDWARE -->
-<a id="add-something" class="anchor" href="#hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
+<a id="hardware" class="anchor" href="#hardware" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hardware</h3>
 <p>
 [1] <a href="http://ashumeow.github.io/ashumeow/hardware_basics.html">Hardware Basics</a> <br>
 [2] <a href="http://ashumeow.github.io/ashumeow/hardware_internals.html">Hardware Internals</a><br>
@@ -43,7 +43,7 @@ Discover...
 </p>
 
 <h3> <!-- SYSTEMS -->
-<a id="add-something-1" class="anchor" href="#systems" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
+<a id="systems" class="anchor" href="#systems" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
 <p>
 Operating System <br>
 --- Kernel ___ [add link] <br>
@@ -53,7 +53,7 @@ Operating System <br>
 </p>
 
 <h3> <!-- NETWORKS -->
-<a id="add-something-2" class="anchor" href="#networks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
+<a id="networks" class="anchor" href="#networks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
 <p>
 [1] Network basics -- [add link] <br>
 [2] Network Structure -- [add link] <br>
@@ -64,7 +64,7 @@ Operating System <br>
 </p>
 
 <h3> <!-- WWW -->
-<a id="add-something-2" class="anchor" href="#www" aria-hidden="true"><span class="octicon octicon-link"></span></a>WWW (World Wide Web)</h3>
+<a id="www" class="anchor" href="#www" aria-hidden="true"><span class="octicon octicon-link"></span></a>WWW (World Wide Web)</h3>
 <p>
 <b>Requirements</b> <br>
 [1] Computer System <br>
@@ -80,7 +80,7 @@ Content-Type: text/html; charset=UTF-8
 </p>
 
 <h3> <!-- APPLICATIONS -->
-<a id="add-something-3" class="anchor" href="#applications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
+<a id="applications" class="anchor" href="#applications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 <p>
 ~~(Uncategorized)~~ <br>
 [1] Middleware/APIs -- [add link] <br>
@@ -90,7 +90,7 @@ Content-Type: text/html; charset=UTF-8
 </p>
 
 <h3> <!-- SERVERS -->
-<a id="add-something-2" class="anchor" href="#servers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
+<a id="servers" class="anchor" href="#servers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
 <p>
 <b>----- Getting Started -----</b> <br>
 [1] Server basics -- [add link]  <br>
@@ -115,6 +115,12 @@ Content-Type: text/html; charset=UTF-8
 [16] Sound server -- [add link]  <br>
 [17] Stand-alone server -- [add link]  <br>
 [18] Web server -- [add link] 
+</p>
+
+<h3> <!-- CLOUD -->
+<a id="cloud" class="anchor" href="#cloud" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cloud</h3>
+<p>
+Add something...
 </p>
 
   </article>
