--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ Content-Type: text/html; charset=UTF-8
 <h3> <!-- CLOUD -->
 <a id="cloud" class="anchor" href="#cloud" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cloud</h3>
 <p>
-Add something...
+[1] Basics -- [add link] <br>
+[2] Service models -- [add link]
 </p>
 
   </article>
