--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ Discover...
 <a id="systems" class="anchor" href="#systems" aria-hidden="true"><span class="octicon octicon-link"></span></a>Systems</h3>
 <p>
 Operating System <br>
---- Kernel ___ [add link] <br>
---- Device drivers ___ [add link] <br>
---- User interface ___ [add link] <br>
---- Utility software ___ [add link]
+--- <a href="http://ashumeow.github.io/ashumeow/kernel.html">Kernel</a> <br>
+--- <a href="http://ashumeow.github.io/ashumeow/device_drivers.html">Device drivers</a> <br>
+--- <a href="http://ashumeow.github.io/ashumeow/user_interface.html">User interface</a> <br>
+--- <a href="http://ashumeow.github.io/ashumeow/utility_software.html">Utility software</a>
 </p>
 
 <h3> <!-- NETWORKS -->
