--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ Operating System <br>
 <h3> <!-- NETWORKS -->
 <a id="networks" class="anchor" href="#networks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Networks</h3>
 <p>
-[1] Network basics -- [add link] <br>
-[2] Network Structure -- [add link] <br>
-[3] Networking Types -- [add link] <br>
-[4] Network technologies types -- [add link] <br>
-[5] Network Communication Protocols -- [add link] <br>
-[6] Network Performance and Optimization -- [add link]
+[1] <a href="http://ashumeow.github.io/ashumeow/network_basics.html">Network basics</a> <br>
+[2] <a href="http://ashumeow.github.io/ashumeow/network_structure.html">Network Structure</a> <br>
+[3] <a href="http://ashumeow.github.io/ashumeow/networking_types.html">Networking Types</a> <br>
+[4] <a href="http://ashumeow.github.io/ashumeow/network_technologies.html">Network technologies types </a> <br>
+[5] <a href="http://ashumeow.github.io/ashumeow/network_communication_protocols.html">Network Communication Protocols</a> <br>
+[6] <a href="http://ashumeow.github.io/ashumeow/network_perf_optimize.html">Network Performance and Optimization</a>
 </p>
 
 <h3> <!-- WWW -->
@@ -69,7 +69,7 @@ Operating System <br>
 <b>Requirements</b> <br>
 [1] Computer System <br>
 [2] Networking hardware <br>
-[3] Network Communication protocols <br>
+[3] <a href="http://ashumeow.github.io/ashumeow/network_communication_protocols.html">Network Communication protocols</a> <br>
 <b>Implementing the WWW </b> <br>
 [1] Web Client <br>
 GET /ashumeow/index.html HTTP/1.1 <br>
