--- a/application_server.html
+++ b/application_server.html
@@ -28,7 +28,7 @@
         </div>
         <span class="blc"></span><span class="trc"></span>
       </div>
-<!-- NETWORKS -->
+<!-- SERVERS -->
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Application Server</h3>
 <p>
