--- a/index.html
+++ b/index.html
@@ -93,35 +93,35 @@ Content-Type: text/html; charset=UTF-8
 <a id="servers" class="anchor" href="#servers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Servers</h3>
 <p>
 <b>----- Getting Started -----</b> <br>
-[1] Server basics -- [add link]  <br>
+[1] <a href="http://ashumeow.github.io/ashumeow/server_basics.html">Server basics </a><br>
 [2] <br>
 [3] <br>
 <b>----- Server Types -----</b> <br>
-[1] Application server -- [add link]  <br>
-[2] Catalog server -- [add link]  <br>
-[3] Communications server -- [add link]  <br>
-[4] Compute server -- [add link]  <br>
-[5] Database server -- [add link]  <br>
-[6] Fax server -- [add link]  <br>
-[7] File server -- [add link]  <br>
-[8] Game server -- [add link]  <br>
-[9] Home server -- [add link]  <br>
-[10] Mail server -- [add link]  <br>
-[11] Media server -- [add link]  <br>
-[12] Mobile server -- [add link]  <br>
-[13] Name server -- [add link]  <br>
-[14] Print server -- [add link]  <br>
-[15] Proxy server -- [add link]  <br>
-[16] Sound server -- [add link]  <br>
-[17] Stand-alone server -- [add link]  <br>
-[18] Web server -- [add link] 
+[1] <a href="http://ashumeow.github.io/ashumeow/application_server.html">Application server </a>  <br>
+[2] <a href="http://ashumeow.github.io/ashumeow/catalog_server.html">Catalog server </a> <br>
+[3] <a href="http://ashumeow.github.io/ashumeow/communications_server.html">Communications server</a> <br>
+[4] <a href="http://ashumeow.github.io/ashumeow/compute_server.html">Compute server</a><br>
+[5] <a href="http://ashumeow.github.io/ashumeow/database_server.html">Database server</a><br>
+[6] <a href="http://ashumeow.github.io/ashumeow/fax_server.html">Fax server</a> <br>
+[7] <a href="http://ashumeow.github.io/ashumeow/file_server.html">File server </a>  <br>
+[8] <a href="http://ashumeow.github.io/ashumeow/game_server.html">Game server</a> <br>
+[9] <a href="http://ashumeow.github.io/ashumeow/home_server.html">Home server </a><br>
+[10] <a href="http://ashumeow.github.io/ashumeow/mail_server.html">Mail server </a>  <br>
+[11] <a href="http://ashumeow.github.io/ashumeow/media_server.html">Media server</a> <br>
+[12] <a href="http://ashumeow.github.io/ashumeow/mobile_server.html">Mobile server </a>  <br>
+[13] <a href="http://ashumeow.github.io/ashumeow/name_server.html">Name server </a> <br>
+[14] <a href="http://ashumeow.github.io/ashumeow/print_server.html">Print server </a> <br>
+[15] <a href="http://ashumeow.github.io/ashumeow/proxy_server.html">Proxy server </a> <br>
+[16] <a href="http://ashumeow.github.io/ashumeow/sound_server.html">Sound server </a> <br>
+[17] <a href="http://ashumeow.github.io/ashumeow/standalone_server.html">Stand-alone server</a><br>
+[18] <a href="http://ashumeow.github.io/ashumeow/web_server.html">Web server</a>
 </p>
 
 <h3> <!-- CLOUD -->
 <a id="cloud" class="anchor" href="#cloud" aria-hidden="true"><span class="octicon octicon-link"></span></a>Cloud</h3>
 <p>
-[1] Basics -- [add link] <br>
-[2] Service models -- [add link]
+[1] <a href="http://ashumeow.github.io/ashumeow/cloud_basics.html">Basics </a><br>
+[2] <a href="http://ashumeow.github.io/ashumeow/cloud_service_models.html">Service models</a>
 </p>
 
   </article>
