--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ Content-Type: text/html; charset=UTF-8
 <a id="applications" class="anchor" href="#applications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Applications</h3>
 <p>
 ~~(Uncategorized)~~ <br>
-[1] Middleware/APIs -- [add link] <br>
-[2] Languages -- [add link] <br>
-[3] Version Control Systems -- [add link] <br>
-[4] Web Browsers -- [add link]
+[1] <a href="http://ashumeow.github.io/ashumeow/middleware.html">Middleware</a>/APIs <br>
+[2] <a href="http://ashumeow.github.io/ashumeow/languages.html">Languages </a><br>
+[3] <a href="http://ashumeow.github.io/ashumeow/version_control.html">Version Control Systems</a><br>
+[4] <a href="http://ashumeow.github.io/ashumeow/web_browsers.html">Web Browsers</a>
 </p>
 
 <h3> <!-- SERVERS -->
