--- a/kernel.html
+++ b/kernel.html
@@ -32,7 +32,14 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Kernel</h3>
 <p>
-Add something...
+Kernel is termed as the piece of program that runs when the operating system loads. It stays in the main memory.<br>
+It manages the I/O requests from the applications, where it connects the applications to the system hardware. <br>
+It holds the responsibilities in memory management, task management, process management and disk management. <br>
+<br>
+Types of Kernel:- <br>
+--- Monolithic Kernel <br>
+--- Micro Kernel <br>
+--- Hybrid Kernel
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
