--- a/device_drivers.html
+++ b/device_drivers.html
@@ -32,7 +32,38 @@
 <article class="markdown-body">
 <h3><a id="add-something" class="anchor" href="#hardware-networking-basics" aria-hidden="true"><span class="octicon octicon-link"></span></a>Device Drivers</h3>
 <p>
-Add something...
+1. Drivers - Interfaces:- <br>
+--- Printers <br>
+--- Video Adapters <br>
+--- Network cards <br>
+--- Sound cards <br>
+--- Local buses <br>
+--- Low bandwidth I/O <br>
+--- Storage devices (hard disk, CD-ROM, floppy disk) - (ATA, SATA, SCSI) <br>
+--- Image scanners <br>
+--- Digital cameras <br>
+<br>
+2. Virtual Device Drivers:-<br>
+--- Virtual network adapter <br>
+--- Virtual disk device (iSCSI) - [eg. Daemon Tools]<br>
+--- VsD, VLM, VDD <br>
+<br>
+3. Open Drivers<br>
+<br>
+4. APIs <br>
+--- Windows Display Driver Model (WDDM) <br>
+--- Windows Driver Foundation (WDF) <br>
+--- Windows Driver Model (WDM) <br>
+--- Network Driver Interface Specification (NDIS) <br>
+--- Advanced Linux Sound Architecture (ALSA) <br>
+--- Scanner Access Now Easy (SANE) <br>
+--- I/O Kit <br>
+--- Installable File System (IFS) <br>
+--- Open Data-link Interface (ODI) <br>
+--- Uniform Driver Interface (UDI) <br>
+--- Dynax Driver Framework (dxd) <br>
+<br>
+4. Identifiers
 </p>
 <br>
 To navigate back to homepage --- <a href="http://ashumeow.github.io/ashumeow/" class="anchor"><span>Click here</span></a>
